WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278539
[JSC] Fix Duration format's nanoseconds calculation ordering
https://bugs.webkit.org/show_bug.cgi?id=278539
Summary
[JSC] Fix Duration format's nanoseconds calculation ordering
Yusuke Suzuki
Reported
2024-08-22 14:22:49 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-22 14:23:00 PDT
<
rdar://problem/134526619
>
Yusuke Suzuki
Comment 2
2024-08-22 14:23:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32607
EWS
Comment 3
2024-08-23 18:58:39 PDT
Committed
282690@main
(222dacd307a7): <
https://commits.webkit.org/282690@main
> Reviewed commits have been landed. Closing PR #32607 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug