[JSC] Fix Duration format's nanoseconds calculation ordering https://bugs.webkit.org/show_bug.cgi?id=278539 rdar://134526619

Reviewed by Ross Kirsling.

Reduce rounding error by adding smaller value first.

* JSTests/test262/expectations.yaml:
* Source/JavaScriptCore/runtime/IntlDurationFormat.cpp:
(JSC::collectElements):

Canonical link: https://commits.webkit.org/282690@main